--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Danny Oh Tutoring</h1>
-        </header>
-        <section class="about-me">
-            <h2>About Me</h2>
-            <p>I like to teach people who are interested in learning new things! I mostly have experience helping people with topics in early undergraduate math, along with writing (including admission essays). Some potential topics are listed below.</p>
-            <p>Reach out for a free intro lesson. General rates are $50/hour.</p>
-        </section>
-        <section class="topics">
-            <h2>Possible Topics:</h2>
-            <ul>
-                <li>High School Math</li>
-                <li>Linear Algebra</li>
-                <li>Calculus</li>
-                <li>Intro to Proofs</li>
-                <li>Real Analysis</li>
-                <li>Creative Writing</li>
-                <li>College Admission Essays</li>
-            </ul>
-        </section>
+        <div class="content">
+            <header>
+                <h1>Danny Oh Tutoring</h1>
+            </header>
+            <section class="about-me">
+                <h2>About Me</h2>
+                <p>I like to teach people who are interested in learning new things! I mostly have experience helping people with topics in early undergraduate math, along with writing (including admission essays). Some potential topics are listed below.</p>
+                <p>Reach out for a free intro lesson. General rates are $50/hour.</p>
+            </section>
+            <section class="topics">
+                <h2>Possible Topics:</h2>
+                <ul>
+                    <li>High School Math</li>
+                    <li>Linear Algebra</li>
+                    <li>Calculus</li>
+                    <li>Intro to Proofs</li>
+                    <li>Real Analysis</li>
+                    <li>Creative Writing</li>
+                    <li>College Admission Essays</li>
+                </ul>
+            </section>
+        </div>
         <section class="calendly-widget">
             <!-- Calendly inline widget begin -->
             <div class="calendly-inline-widget" data-url="https://calendly.com/hyounginoh/30min" style="min-width:320px;height:700px;"></div>
