--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </header>
             <section class="about-me">
                 <h2>About Me</h2>
-                <p>I like to teach people who are interested in learning new things! I mostly have experience helping people with topics in early undergraduate math, along with writing (including admission essays). Some potential topics are listed below.</p>
+                <p>I like to teach people who are interested in learning new things! I have experience helping people with topics in early undergraduate math, along with writing (including admission essays). Some potential topics are listed below.</p>
                 <p>Reach out for a free intro lesson. General rates are $50/hour.</p>
             </section>
             <section class="topics">
