--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="content">
             <header>
-                <h1>Danny Oh Tutoring</h1>
+                <h1>Hyoung-in (Danny) Oh Tutoring</h1>
             </header>
             <section class="about-me">
                 <h2>About Me</h2>
